--- a/JavaProject/app/src/main/res/layout/activity_about.xml
+++ b/JavaProject/app/src/main/res/layout/activity_about.xml
@@ -6,18 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".About">
 
+
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/userKaNaam"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/AboutTestr"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="31dp"
+        android:layout_marginBottom="710dp"
+        android:text=""
+        android:textSize="17dp" />
+
+    <TextView
+        android:id="@+id/AboutTestr"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="About"
-        android:textSize="40dp"
-        android:layout_centerInParent="true"
-        />
+        android:textSize="17dp" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/design_default_color_primary"
+        app:itemBackground="@color/black"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:menu="@menu/menu_navigation"
