--- a/JavaProject/app/src/main/res/layout/activity_dashboard.xml
+++ b/JavaProject/app/src/main/res/layout/activity_dashboard.xml
@@ -5,22 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Dashboard">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dashboard"
-        android:textSize="40dp"
-        android:layout_centerInParent="true"
-        />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/design_default_color_primary"
+        app:itemBackground="@color/black"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:menu="@menu/menu_navigation"
         android:layout_alignParentBottom="true"
         />
+
+    <ListView
+        android:id="@+id/VideoList"
+        android:layout_width="match_parent"
+        android:layout_height="701dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="62dp" />
 
 </RelativeLayout>
