--- a/JavaProject/app/src/main/res/layout/activity_fir_page2.xml
+++ b/JavaProject/app/src/main/res/layout/activity_fir_page2.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".FirPage2">
 
+    <ImageView
+        android:id="@+id/imageIdOfPerson"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01999998"
+        app:srcCompat="@drawable/weasfasfsafasa" />
+
+    <Button
+        android:id="@+id/openCamera"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:text="Camera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageIdOfPerson" />
 </androidx.constraintlayout.widget.ConstraintLayout>
