--- a/JavaProject/app/src/main/res/layout/activity_dashboard.xml
+++ b/JavaProject/app/src/main/res/layout/activity_dashboard.xml
@@ -20,6 +20,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyelcwithFirestore"
         android:layout_width="match_parent"
+        android:dividerHeight="8dp"
         android:layout_height="match_parent" />
 
     <ProgressBar
