final Changes Done

--- a/JavaProject/app/src/main/res/layout/activity_dashboard.xml
+++ b/JavaProject/app/src/main/res/layout/activity_dashboard.xml
@@ -20,8 +20,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyelcwithFirestore"
         android:layout_width="match_parent"
-        android:dividerHeight="8dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:dividerHeight="18dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginVertical="8dp"
+        android:background="#000000"
+        app:layoutManager="LinearLayoutManager"
+        android:paddingBottom="10dp" />
 
     <ProgressBar
         android:id="@+id/DataLoadingIndicator"
