--- a/JavaProject/app/src/main/res/layout/activity_about.xml
+++ b/JavaProject/app/src/main/res/layout/activity_about.xml
@@ -31,4 +31,18 @@
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/unnamed" />
 
+    <TextView
+        android:id="@+id/editLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="63dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="291dp"
+        android:layout_marginBottom="791dp"
+        android:text="TextView" />
+
 </RelativeLayout>
